# for display continuity sake please use 2 spaces instead of tabs

2014-01-06 mmichaud <m.michael.michaud@orange.fr>
  * fix a regression in GeometryFunctionPlugIn (non editable layer throws NPE)

2014-01-06 Matthias Scholz <ms@jammerhund.de>
  * Enhancement of the AbstractCursorTool for XOR painting Image's as visual
    indicator too. One usecase is the SuperZoomPanTool. If you use the wheel in
    this tool for zooming you get more information as it was possible with a
    simple shape.

2013-12-24 ede "happy holidays"
  * update jts to 1.14 snapshot supposedly containing 
    spatiallite multigeometry fix

2013-12-10 mmichaud <m.michael.michaud@orange.fr>
  * Fix #352 : Layers loaded from file can have duplicate names

2013-11-30 Matthias Scholz <ms@jammerhund.de>
  * Some improvements for SaveLegendPlugin:
    - code cleanup: fix imports and @Overrides
    - ask befor overwrite an existing file
    - fileselection for PNG and only files
    - moved fileChooser variable from saveLegend() to a class variable, thereby
      the last directory is remembered
    - all selected layers will now be saved, not only one
    - avoid "terrible" filechooser hight through to many selected layers or 
      themed layers
    - for normal, non themed layers the fill and line color is now visible

2013-11-29 mmichaud <michael.michaud@free.fr>
  * #199 save raster as can save larger images if memory is available

2013-11-26 Giuseppe Aruta <giuseppe.aruta@gmal.com>
  * Add MoveSelectedLayerPlugin. Move selected layers to Category
  	Adapted from Skyjump MoveSelectedLayers PlugIn to OpenJUMP
  	- Internationalized
  	- Extended the Plugin to work with WMS layers and Sextante Raster layers

2013-11-23 mmichaud <michael.michaud@free.fr>
  * try a fix for #327 (header problem in WMS requests)

2013-11-16 mmichaud <michael.michaud@free.fr>
  * Add 2D/3D option for new Save As PostGIS Table

2013-11-12 mmichaud <michael.michaud@free.fr>
  * Fix in linear referencing plugin
