@@ -555,6 +555,10 @@
 	<plug-in>
 		org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn
 	</plug-in>
+	<plug-in>
+	    org.openjump.core.ui.plugin.tools.analysis.twolayers.CalculateDistancesPlugIn
+    </plug-in>
+    	    
 	<!--plug-in>com.vividsolutions.jump.workbench.ui.plugin.analysis.UnionPlugIn</plug-in -->
 
 	<!--- ========= Statistics ==================== / -->
