@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2014-01-15 mentaer <sstein@geo.uzh.ch>
+  * New analysis tool (CalculateDistancesPlugIn) to calculate distances between 
+    two sets of geometries. Calculates shortest distance, centroid distance and 
+    Hausforff distance.
+    
 2014-01-06 mmichaud <m.michael.michaud@orange.fr>
   * fix a regression in GeometryFunctionPlugIn (non editable layer throws NPE)
 
